Sun Jan 14 21:49:28 2001  Koji Arai  <JCA02266@nifty.ne.jp>

	* sprintf.c (rb_f_sprintf): simple typo.  binary base should be 2,
	  not '2'.

Sun Jan 14 02:49:57 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb (adding): too few "yield" in case of arg is
	not String/File.

Sat Jan 13 19:18:18 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* re.c (rb_reg_desc): separate RE_OPTION_MULTILINE

	* re.c (rb_reg_options): add RE_OPTION_{POSIXLINE,RE_OPTION_MULTILINE,
	  RE_OPTION_EXTENDED}

Thu Jan 11 06:45:55 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_mod_dup): should propagate FL_SINGLETON.

	* object.c (inspect_obj): handles the case of no instance variable.

Wed Jan 10 01:50:45 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_reverse_bang): forgot to call rb_str_modify().

Tue Jan  9 17:41:40 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_obj_taint): check frozen status before modifying
	  taint status.

	* object.c (rb_obj_untaint): ditto.

Mon Jan  8 21:35:10 2001  Guy Decoux  <decoux@moulon.inra.fr>

	* file.c (path_check_1): should restore modified path.

Mon Jan  8 21:24:37 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigdivrem): t2 might be too big for signed long; do
	  not use rb_int2big(), but rb_uint2big().

Sat Jan  6 00:55:59 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): template "m2" or "u2" caused inifinite loop.

Fri Jan  5 01:02:17 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ruby_finalize): should enclosed by PUSH_TAG/POP_TAG.

Sun Dec 31 01:39:16 2000  Guy Decoux  <decoux@moulon.inra.fr>

	* eval.c (rb_mod_define_method): wrong comparison for blocks.

Sat Dec 30 19:28:50 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (id2ref): should handle Symbol too.

	* gc.c (id2ref): should print original ptr value

Sat Dec 30 03:14:22 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>
